stylesheets/style.css
/* ... */
/*#wrapper { padding: 0em 2.5em 0em}*/

.header {border-bottom: 1px solid #EFEFEF  }
.header-inside {margin: 0 auto; max-width: 1440px  }
.header h1 {float: left;
    padding: 18px 20px;
    font-weight: 300;
    text-transform: uppercase;
    font-size: 16px;
    letter-spacing: 1px; }
.navigation {float: right; color: #333;font-size: 18px;}
.navigation a {text-decoration: none;   text-align: left; }
.mobile-nav {display: none}
.mobile-nav-dropdown {display: none}

ul {
    text-align: left;
    display: inline;
    margin: 0;
    list-style: none;
    font-family: 'Roboto', sans-serif;
}
ul li {
    display: inline-block;
    position: relative;
    padding: 18px 20px;
    background: #fff;
    cursor: pointer;
    font-size: 14px;
    text-transform: uppercase;


}


ul li:hover {color: #aaa;}

ul a {color: #333}
ul a:hover {}
ul li ul {
    padding: 0;
    position: absolute;
    left: 0;
    width: 200px;
    box-shadow: none;
    display: none;
    opacity: 0;
    visibility: hidden

}
ul li ul li {
    background: #FBFBFB;
    display: block;
    color: #333;
    top: 18px;
    padding: 20px 0 18px 25px;
    line-height:20px;
}
ul li ul li:hover {background-color: #E9E9E9}

ul li:hover ul {
    display: block;
    opacity: 1;
    visibility: visible;
}

.centered {text-align: center !important; width: 100% !important;}
.main-section {padding-top: 120px;}
.main-section2 {padding-top: 120px; padding-bottom: 120px}
.main-section2 h3 {margin-bottom: 0!important}
.logo {margin-bottom: 40px;}
/*.cta {-webkit-border-radius: 300px;-moz-border-radius: 300px;border-radius: 300px; border: 1px solid #fff; margin: 0 auto; padding: 15px 30px;
text-align: center;display: block; margin: 0 auto}*/
.info-writing-header {margin-bottom: 40px;margin-left: 20px;margin-right: 20px; margin-top: 40px; text-align: left;}
.info-writing {margin-bottom: 0px;margin-left: 20px;margin-right: 20px;text-align: left;}
.info-writing-black {margin-bottom: 0px;margin-left: 20px;margin-right: 20px;text-align: left;}
.cta {text-align: center; display: block;opacity: 0.7;}
.cta-writing {text-align: center; display: block;opacity: 0.7; color: #FFFFFF}
.cta-writing-black {text-align: center; display: block;opacity: 0.7; color: #000000}
.info-writing-black a {color: #000000;  max-width: 200px; margin: 40px auto 0px; font-weight: 500; text-decoration: none; text-align: center; text-transform: uppercase;
    font-size: 14px;font-family: 'Roboto', sans-serif;letter-spacing: 2px;-webkit-border-radius: 300px;-moz-border-radius: 300px;border-radius: 300px; padding: 18px 6px 18px 6px;
    border: 2px solid #000000;   -moz-box-shadow: 0px; -webkit-box-shadow: 0px;box-shadow:0px; opacity: 1 }
.info-writing-black a:hover {background-color: #000000; color: #FFFFFF }
.info-writing a {color: #fff;  max-width: 200px; margin: 40px auto 0px; font-weight: 500; text-decoration: none; text-align: center; text-transform: uppercase;
    font-size: 14px;font-family: 'Roboto', sans-serif;letter-spacing: 2px;-webkit-border-radius: 300px;-moz-border-radius: 300px;border-radius: 300px; padding: 18px 6px 18px 6px;
    border: 2px solid #FFFFFF;   -moz-box-shadow: 0px; -webkit-box-shadow: 0px;box-shadow:0px; opacity: 1 }
.info-writing a:hover {background-color: #FFFFFF; color: #000 }
.main-section a {color: #fff;  max-width: 200px;margin: 0 auto; font-weight: 500; text-decoration: none; text-align: center; text-transform: uppercase;
    font-size: 14px;font-family: 'Roboto', sans-serif;letter-spacing: 2px;-webkit-border-radius: 300px;-moz-border-radius: 300px;border-radius: 300px; padding: 18px 6px 18px 6px;
    border: 2px solid #FFFFFF;   -moz-box-shadow: 0px; -webkit-box-shadow: 0px;box-shadow:0px; opacity: 1 }
.main-section a:hover {background-color: #FFFFFF; color: #000 }
.logo { display:block;margin:auto;}
.main-content {max-width:1440px; margin:0 auto;}

.yelp {padding-bottom: 30px; color: #FFF;}
.yelp h2 {max-width: 600px; color: #000;}
.yelp h3 {max-width: 1200px; margin-bottom: 50px; color: #000}
.main-section2 h3 {max-width: 910px !important}
.yelp-project {padding-top: 60px;padding-bottom: 140px; }
.yelp-project  img {    display: block;margin: 0 auto;width: 80%; }
.yelp a {color: #000}

.first-dibs {background-color:#21242B}
.first-dibs h2 {max-width: 820px; }
.first-dibs h3 {max-width: 740px; margin-bottom: 50px}
.first-dibs-project {padding-top: 60px;padding-bottom: 140px;}
.first-dibs-project img {  display: block;margin: 0 auto;width: 80%;}

.pack {background-color:#21B179}
.pack h2 {max-width: 960px; }
.pack h3 {max-width: 980px; margin-bottom: 50px}
.pack-project {padding-top: 60px;padding-bottom: 140px;}
.pack-project img { display: block;margin: 0 auto;width: 80%; margin-top: 40px}
.packlink {color: #000; opacity: .7; display: block; margin-bottom: 100px; font-size: 16px}
.packlink:hover {opacity: 1}

.writing {background-color:#21242B}
.writing h2 {max-width: 750px; padding-top: 0; padding-bottom: 0; color: #fff }
.writing h3 {max-width: 920px; margin-bottom: 50px; color: #fff}
.writing-project {padding-top: 60px;padding-bottom: 140px; margin-left: 3%; margin-right: 3%;}
.writing-project img {    float: left;    width: 31.3%;}
.center-writing {margin-left: 3%; margin-right: 3%}
.writing a {color: #fff}

.designs {background-color:#74a1d5}
.designs h2 {max-width: 750px; padding-top: 0; padding-bottom: 0; color: #fff }
.designs h3 {max-width: 920px; margin-bottom: 50px; color: #fff}
.designs-project {padding-top: 60px;padding-bottom: 140px; margin-left: 3%; margin-right: 3%;}
.designs-project img {    float: left;    width: 31.3%;}
.center-design {margin-left: 3%; margin-right: 3%}
.designs a {color: #fff}

.extra {background-color:#3982C3}
.extra h2 {max-width: 720px;padding-top: 0; padding-bottom: 0 }
.extra h3 {max-width: 920px; margin-bottom: 50px}
.extra-project {padding-top: 60px;padding-bottom: 120px;}
.extra-project img {    display: block;margin: 0 auto;width: 50%;}
/* ... */

